all code is entered for css to pick up

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+    <div id="container1">
+        <div id="firstSquare"></div>
+        <div id="secondSquare"></div>
+        <div id="circle"></div>
+    </div>
+    <div id="container2">
+        <div id="onlybox"></div>
+    </div>
+    <div>
+        <p>HELLO FRIENDS</p>
+    </div>
 
 </body>
 
