all works and linked to the css file

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="container2">
         <div id="onlybox"></div>
     </div>
-    <div>
-        <p>HELLO FRIENDS</p>
+    <div id="container3">
+        <h1>HELLO FRIENDS</h1>
     </div>
 
 </body>
